--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,10 @@ dependencies {
     // Glide
     implementation "com.github.bumptech.glide:glide:$version_glide"
     annotationProcessor "com.github.bumptech.glide:compiler:$version_glide"
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    // Coroutine with Retrofit
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
     // WorkManager
     implementation "androidx.work:work-runtime-ktx:$version_work"
